parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> expression
Rule 1     expression -> LCURLYBRACE expression RCURLYBRACE
Rule 2     statement -> LCURLYBRACE expression
Rule 3     expression -> LCURLYBRACE
Rule 4     expression -> RCURLYBRACE
Rule 5     expression -> PRINT LPAREN expression RPAREN
Rule 6     expression -> PRINT LPAREN expression RPAREN SEMICOLON
Rule 7     expression -> RETURN expression SEMICOLON
Rule 8     expression -> VARNAME LPAREN factor RPAREN
Rule 9     expression -> WHILE LPAREN expression RPAREN LCURLYBRACE
Rule 10    expression -> IF LPAREN expression RPAREN LCURLYBRACE
Rule 11    expression -> WHILE LPAREN expression RPAREN
Rule 12    expression -> IF LPAREN expression RPAREN
Rule 13    expression -> RCURLYBRACE ELSE LCURLYBRACE
Rule 14    expression -> ELSE
Rule 15    expression -> expression EQUAL primary
Rule 16    expression -> expression LESSE primary
Rule 17    expression -> expression GREATE primary
Rule 18    expression -> expression UNEQUAL primary
Rule 19    expression -> expression LESS primary
Rule 20    expression -> expression GREAT primary
Rule 21    expression -> primary EQUAL expression
Rule 22    expression -> primary LESSE expression
Rule 23    expression -> primary GREATE expression
Rule 24    expression -> primary UNEQUAL expression
Rule 25    expression -> primary LESS expression
Rule 26    expression -> primary GREAT expression
Rule 27    expression -> expression PLUS term
Rule 28    expression -> expression MINUS term
Rule 29    expression -> expression POWER term
Rule 30    expression -> expression TIMES term
Rule 31    expression -> expression DIVIDE2 term
Rule 32    expression -> expression DIVIDE term
Rule 33    expression -> expression MODULUS term
Rule 34    expression -> expression OR term
Rule 35    expression -> expression AND term
Rule 36    expression -> expression IN expression
Rule 37    expression -> term PLUS expression
Rule 38    expression -> term MINUS expression
Rule 39    expression -> term POWER expression
Rule 40    expression -> term TIMES expression
Rule 41    expression -> term DIVIDE2 expression
Rule 42    expression -> term DIVIDE expression
Rule 43    expression -> term MODULUS expression
Rule 44    expression -> term OR expression
Rule 45    expression -> term AND expression
Rule 46    expression -> VARNAME SQOPEN primary SQCLOSE ASSIGN term SEMICOLON
Rule 47    expression -> VARNAME ASSIGN expression SEMICOLON
Rule 48    expression -> term ASSIGN expression SEMICOLON
Rule 49    expression -> NOT term
Rule 50    expression -> term
Rule 51    term -> term LESSE term
Rule 52    term -> term GREATE term
Rule 53    term -> term UNEQUAL term
Rule 54    term -> term LESS term
Rule 55    term -> term GREAT term
Rule 56    term -> term EQUAL term
Rule 57    term -> LPAREN expression RPAREN
Rule 58    term -> VARNAME SQOPEN expression SQCLOSE
Rule 59    term -> VARNAME SQOPEN primary SQCLOSE SQOPEN primary SQCLOSE
Rule 60    term -> VARNAME SQOPEN primary SQCLOSE
Rule 61    term -> SQOPEN primary SQCLOSE
Rule 62    term -> SQOPEN factor SQCLOSE SQOPEN NUMBER SQCLOSE
Rule 63    term -> SQOPEN factor SQCLOSE
Rule 64    term -> SQOPEN SQCLOSE
Rule 65    factor -> terms COMMA factor
Rule 66    terms -> SQOPEN factor SQCLOSE
Rule 67    terms -> SQOPEN SQCLOSE
Rule 68    terms -> NOT terms
Rule 69    terms -> terms PLUS terms
Rule 70    terms -> terms MINUS terms
Rule 71    terms -> terms POWER terms
Rule 72    terms -> terms TIMES terms
Rule 73    terms -> terms DIVIDE2 terms
Rule 74    terms -> terms DIVIDE terms
Rule 75    terms -> terms MODULUS terms
Rule 76    terms -> terms OR terms
Rule 77    terms -> terms AND terms
Rule 78    terms -> terms IN terms
Rule 79    terms -> terms LESSE terms
Rule 80    terms -> terms GREATE terms
Rule 81    terms -> terms UNEQUAL terms
Rule 82    terms -> terms LESS terms
Rule 83    terms -> terms GREAT terms
Rule 84    terms -> terms EQUAL terms
Rule 85    terms -> LPAREN terms RPAREN
Rule 86    terms -> primary
Rule 87    factor -> terms
Rule 88    factor -> primary
Rule 89    term -> primary
Rule 90    primary -> STRING
Rule 91    primary -> VARNAME
Rule 92    primary -> NUMBER
Rule 93    primary -> REAL

Terminals, with rules where they appear

AND                  : 35 45 77
ASSIGN               : 46 47 48
COMMA                : 65
DIVIDE               : 32 42 74
DIVIDE2              : 31 41 73
ELSE                 : 13 14
EQUAL                : 15 21 56 84
GREAT                : 20 26 55 83
GREATE               : 17 23 52 80
IF                   : 10 12
IN                   : 36 78
LCURLYBRACE          : 1 2 3 9 10 13
LESS                 : 19 25 54 82
LESSE                : 16 22 51 79
LPAREN               : 5 6 8 9 10 11 12 57 85
MINUS                : 28 38 70
MODULUS              : 33 43 75
NOT                  : 49 68
NUMBER               : 62 92
OR                   : 34 44 76
PLUS                 : 27 37 69
POWER                : 29 39 71
PRINT                : 5 6
RCURLYBRACE          : 1 4 13
REAL                 : 93
RETURN               : 7
RPAREN               : 5 6 8 9 10 11 12 57 85
SEMICOLON            : 6 7 46 47 48
SQCLOSE              : 46 58 59 59 60 61 62 62 63 64 66 67
SQOPEN               : 46 58 59 59 60 61 62 62 63 64 66 67
STRING               : 90
TIMES                : 30 40 72
UNEQUAL              : 18 24 53 81
VARNAME              : 8 46 47 58 59 60 91
WHILE                : 9 11
error                : 

Nonterminals, with rules where they appear

expression           : 1 2 5 6 7 9 10 11 12 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 36 37 38 39 40 41 42 43 44 45 47 48 57 58 0
factor               : 8 62 63 65 66
primary              : 15 16 17 18 19 20 21 22 23 24 25 26 46 59 59 60 61 86 88 89
statement            : 
term                 : 27 28 29 30 31 32 33 34 35 37 38 39 40 41 42 43 44 45 46 48 49 50 51 51 52 52 53 53 54 54 55 55 56 56
terms                : 65 68 69 69 70 70 71 71 72 72 73 73 74 74 75 75 76 76 77 77 78 78 79 79 80 80 81 81 82 82 83 83 84 84 85 87

Parsing method: LALR

state 0

    (0) S' -> . expression
    (1) expression -> . LCURLYBRACE expression RCURLYBRACE
    (3) expression -> . LCURLYBRACE
    (4) expression -> . RCURLYBRACE
    (5) expression -> . PRINT LPAREN expression RPAREN
    (6) expression -> . PRINT LPAREN expression RPAREN SEMICOLON
    (7) expression -> . RETURN expression SEMICOLON
    (8) expression -> . VARNAME LPAREN factor RPAREN
    (9) expression -> . WHILE LPAREN expression RPAREN LCURLYBRACE
    (10) expression -> . IF LPAREN expression RPAREN LCURLYBRACE
    (11) expression -> . WHILE LPAREN expression RPAREN
    (12) expression -> . IF LPAREN expression RPAREN
    (13) expression -> . RCURLYBRACE ELSE LCURLYBRACE
    (14) expression -> . ELSE
    (15) expression -> . expression EQUAL primary
    (16) expression -> . expression LESSE primary
    (17) expression -> . expression GREATE primary
    (18) expression -> . expression UNEQUAL primary
    (19) expression -> . expression LESS primary
    (20) expression -> . expression GREAT primary
    (21) expression -> . primary EQUAL expression
    (22) expression -> . primary LESSE expression
    (23) expression -> . primary GREATE expression
    (24) expression -> . primary UNEQUAL expression
    (25) expression -> . primary LESS expression
    (26) expression -> . primary GREAT expression
    (27) expression -> . expression PLUS term
    (28) expression -> . expression MINUS term
    (29) expression -> . expression POWER term
    (30) expression -> . expression TIMES term
    (31) expression -> . expression DIVIDE2 term
    (32) expression -> . expression DIVIDE term
    (33) expression -> . expression MODULUS term
    (34) expression -> . expression OR term
    (35) expression -> . expression AND term
    (36) expression -> . expression IN expression
    (37) expression -> . term PLUS expression
    (38) expression -> . term MINUS expression
    (39) expression -> . term POWER expression
    (40) expression -> . term TIMES expression
    (41) expression -> . term DIVIDE2 expression
    (42) expression -> . term DIVIDE expression
    (43) expression -> . term MODULUS expression
    (44) expression -> . term OR expression
    (45) expression -> . term AND expression
    (46) expression -> . VARNAME SQOPEN primary SQCLOSE ASSIGN term SEMICOLON
    (47) expression -> . VARNAME ASSIGN expression SEMICOLON
    (48) expression -> . term ASSIGN expression SEMICOLON
    (49) expression -> . NOT term
    (50) expression -> . term
    (90) primary -> . STRING
    (91) primary -> . VARNAME
    (92) primary -> . NUMBER
    (93) primary -> . REAL
    (51) term -> . term LESSE term
    (52) term -> . term GREATE term
    (53) term -> . term UNEQUAL term
    (54) term -> . term LESS term
    (55) term -> . term GREAT term
    (56) term -> . term EQUAL term
    (57) term -> . LPAREN expression RPAREN
    (58) term -> . VARNAME SQOPEN expression SQCLOSE
    (59) term -> . VARNAME SQOPEN primary SQCLOSE SQOPEN primary SQCLOSE
    (60) term -> . VARNAME SQOPEN primary SQCLOSE
    (61) term -> . SQOPEN primary SQCLOSE
    (62) term -> . SQOPEN factor SQCLOSE SQOPEN NUMBER SQCLOSE
    (63) term -> . SQOPEN factor SQCLOSE
    (64) term -> . SQOPEN SQCLOSE
    (89) term -> . primary

    LCURLYBRACE     shift and go to state 2
    RCURLYBRACE     shift and go to state 3
    PRINT           shift and go to state 4
    RETURN          shift and go to state 6
    VARNAME         shift and go to state 7
    WHILE           shift and go to state 8
    IF              shift and go to state 9
    ELSE            shift and go to state 10
    NOT             shift and go to state 14
    STRING          shift and go to state 15
    NUMBER          shift and go to state 16
    REAL            shift and go to state 17
    LPAREN          shift and go to state 5
    SQOPEN          shift and go to state 13

    expression                     shift and go to state 1
    primary                        shift and go to state 11
    term                           shift and go to state 12

state 1

    (0) S' -> expression .
    (15) expression -> expression . EQUAL primary
    (16) expression -> expression . LESSE primary
    (17) expression -> expression . GREATE primary
    (18) expression -> expression . UNEQUAL primary
    (19) expression -> expression . LESS primary
    (20) expression -> expression . GREAT primary
    (27) expression -> expression . PLUS term
    (28) expression -> expression . MINUS term
    (29) expression -> expression . POWER term
    (30) expression -> expression . TIMES term
    (31) expression -> expression . DIVIDE2 term
    (32) expression -> expression . DIVIDE term
    (33) expression -> expression . MODULUS term
    (34) expression -> expression . OR term
    (35) expression -> expression . AND term
    (36) expression -> expression . IN expression

    EQUAL           shift and go to state 18
    LESSE           shift and go to state 19
    GREATE          shift and go to state 20
    UNEQUAL         shift and go to state 21
    LESS            shift and go to state 22
    GREAT           shift and go to state 23
    PLUS            shift and go to state 24
    MINUS           shift and go to state 25
    POWER           shift and go to state 26
    TIMES           shift and go to state 27
    DIVIDE2         shift and go to state 28
    DIVIDE          shift and go to state 29
    MODULUS         shift and go to state 30
    OR              shift and go to state 31
    AND             shift and go to state 32
    IN              shift and go to state 33


state 2

    (1) expression -> LCURLYBRACE . expression RCURLYBRACE
    (3) expression -> LCURLYBRACE .
    (1) expression -> . LCURLYBRACE expression RCURLYBRACE
    (3) expression -> . LCURLYBRACE
    (4) expression -> . RCURLYBRACE
    (5) expression -> . PRINT LPAREN expression RPAREN
    (6) expression -> . PRINT LPAREN expression RPAREN SEMICOLON
    (7) expression -> . RETURN expression SEMICOLON
    (8) expression -> . VARNAME LPAREN factor RPAREN
    (9) expression -> . WHILE LPAREN expression RPAREN LCURLYBRACE
    (10) expression -> . IF LPAREN expression RPAREN LCURLYBRACE
    (11) expression -> . WHILE LPAREN expression RPAREN
    (12) expression -> . IF LPAREN expression RPAREN
    (13) expression -> . RCURLYBRACE ELSE LCURLYBRACE
    (14) expression -> . ELSE
    (15) expression -> . expression EQUAL primary
    (16) expression -> . expression LESSE primary
    (17) expression -> . expression GREATE primary
    (18) expression -> . expression UNEQUAL primary
    (19) expression -> . expression LESS primary
    (20) expression -> . expression GREAT primary
    (21) expression -> . primary EQUAL expression
    (22) expression -> . primary LESSE expression
    (23) expression -> . primary GREATE expression
    (24) expression -> . primary UNEQUAL expression
    (25) expression -> . primary LESS expression
    (26) expression -> . primary GREAT expression
    (27) expression -> . expression PLUS term
    (28) expression -> . expression MINUS term
    (29) expression -> . expression POWER term
    (30) expression -> . expression TIMES term
    (31) expression -> . expression DIVIDE2 term
    (32) expression -> . expression DIVIDE term
    (33) expression -> . expression MODULUS term
    (34) expression -> . expression OR term
    (35) expression -> . expression AND term
    (36) expression -> . expression IN expression
    (37) expression -> . term PLUS expression
    (38) expression -> . term MINUS expression
    (39) expression -> . term POWER expression
    (40) expression -> . term TIMES expression
    (41) expression -> . term DIVIDE2 expression
    (42) expression -> . term DIVIDE expression
    (43) expression -> . term MODULUS expression
    (44) expression -> . term OR expression
    (45) expression -> . term AND expression
    (46) expression -> . VARNAME SQOPEN primary SQCLOSE ASSIGN term SEMICOLON
    (47) expression -> . VARNAME ASSIGN expression SEMICOLON
    (48) expression -> . term ASSIGN expression SEMICOLON
    (49) expression -> . NOT term
    (50) expression -> . term
    (90) primary -> . STRING
    (91) primary -> . VARNAME
    (92) primary -> . NUMBER
    (93) primary -> . REAL
    (51) term -> . term LESSE term
    (52) term -> . term GREATE term
    (53) term -> . term UNEQUAL term
    (54) term -> . term LESS term
    (55) term -> . term GREAT term
    (56) term -> . term EQUAL term
    (57) term -> . LPAREN expression RPAREN
    (58) term -> . VARNAME SQOPEN expression SQCLOSE
    (59) term -> . VARNAME SQOPEN primary SQCLOSE SQOPEN primary SQCLOSE
    (60) term -> . VARNAME SQOPEN primary SQCLOSE
    (61) term -> . SQOPEN primary SQCLOSE
    (62) term -> . SQOPEN factor SQCLOSE SQOPEN NUMBER SQCLOSE
    (63) term -> . SQOPEN factor SQCLOSE
    (64) term -> . SQOPEN SQCLOSE
    (89) term -> . primary

  ! shift/reduce conflict for RCURLYBRACE resolved as shift
    EQUAL           reduce using rule 3 (expression -> LCURLYBRACE .)
    LESSE           reduce using rule 3 (expression -> LCURLYBRACE .)
    GREATE          reduce using rule 3 (expression -> LCURLYBRACE .)
    UNEQUAL         reduce using rule 3 (expression -> LCURLYBRACE .)
    LESS            reduce using rule 3 (expression -> LCURLYBRACE .)
    GREAT           reduce using rule 3 (expression -> LCURLYBRACE .)
    PLUS            reduce using rule 3 (expression -> LCURLYBRACE .)
    MINUS           reduce using rule 3 (expression -> LCURLYBRACE .)
    POWER           reduce using rule 3 (expression -> LCURLYBRACE .)
    TIMES           reduce using rule 3 (expression -> LCURLYBRACE .)
    DIVIDE2         reduce using rule 3 (expression -> LCURLYBRACE .)
    DIVIDE          reduce using rule 3 (expression -> LCURLYBRACE .)
    MODULUS         reduce using rule 3 (expression -> LCURLYBRACE .)
    OR              reduce using rule 3 (expression -> LCURLYBRACE .)
    AND             reduce using rule 3 (expression -> LCURLYBRACE .)
    IN              reduce using rule 3 (expression -> LCURLYBRACE .)
    $end            reduce using rule 3 (expression -> LCURLYBRACE .)
    RPAREN          reduce using rule 3 (expression -> LCURLYBRACE .)
    SEMICOLON       reduce using rule 3 (expression -> LCURLYBRACE .)
    SQCLOSE         reduce using rule 3 (expression -> LCURLYBRACE .)
    LCURLYBRACE     shift and go to state 2
    RCURLYBRACE     shift and go to state 3
    PRINT           shift and go to state 4
    RETURN          shift and go to state 6
    VARNAME         shift and go to state 7
    WHILE           shift and go to state 8
    IF              shift and go to state 9
    ELSE            shift and go to state 10
    NOT             shift and go to state 14
    STRING          shift and go to state 15
    NUMBER          shift and go to state 16
    REAL            shift and go to state 17
    LPAREN          shift and go to state 5
    SQOPEN          shift and go to state 13

  ! RCURLYBRACE     [ reduce using rule 3 (expression -> LCURLYBRACE .) ]

    expression                     shift and go to state 34
    primary                        shift and go to state 11
    term                           shift and go to state 12

state 3

    (4) expression -> RCURLYBRACE .
    (13) expression -> RCURLYBRACE . ELSE LCURLYBRACE

    EQUAL           reduce using rule 4 (expression -> RCURLYBRACE .)
    LESSE           reduce using rule 4 (expression -> RCURLYBRACE .)
    GREATE          reduce using rule 4 (expression -> RCURLYBRACE .)
    UNEQUAL         reduce using rule 4 (expression -> RCURLYBRACE .)
    LESS            reduce using rule 4 (expression -> RCURLYBRACE .)
    GREAT           reduce using rule 4 (expression -> RCURLYBRACE .)
    PLUS            reduce using rule 4 (expression -> RCURLYBRACE .)
    MINUS           reduce using rule 4 (expression -> RCURLYBRACE .)
    POWER           reduce using rule 4 (expression -> RCURLYBRACE .)
    TIMES           reduce using rule 4 (expression -> RCURLYBRACE .)
    DIVIDE2         reduce using rule 4 (expression -> RCURLYBRACE .)
    DIVIDE          reduce using rule 4 (expression -> RCURLYBRACE .)
    MODULUS         reduce using rule 4 (expression -> RCURLYBRACE .)
    OR              reduce using rule 4 (expression -> RCURLYBRACE .)
    AND             reduce using rule 4 (expression -> RCURLYBRACE .)
    IN              reduce using rule 4 (expression -> RCURLYBRACE .)
    $end            reduce using rule 4 (expression -> RCURLYBRACE .)
    RCURLYBRACE     reduce using rule 4 (expression -> RCURLYBRACE .)
    RPAREN          reduce using rule 4 (expression -> RCURLYBRACE .)
    SEMICOLON       reduce using rule 4 (expression -> RCURLYBRACE .)
    SQCLOSE         reduce using rule 4 (expression -> RCURLYBRACE .)
    ELSE            shift and go to state 35


state 4

    (5) expression -> PRINT . LPAREN expression RPAREN
    (6) expression -> PRINT . LPAREN expression RPAREN SEMICOLON

    LPAREN          shift and go to state 36


state 5

    (57) term -> LPAREN . expression RPAREN
    (1) expression -> . LCURLYBRACE expression RCURLYBRACE
    (3) expression -> . LCURLYBRACE
    (4) expression -> . RCURLYBRACE
    (5) expression -> . PRINT LPAREN expression RPAREN
    (6) expression -> . PRINT LPAREN expression RPAREN SEMICOLON
    (7) expression -> . RETURN expression SEMICOLON
    (8) expression -> . VARNAME LPAREN factor RPAREN
    (9) expression -> . WHILE LPAREN expression RPAREN LCURLYBRACE
    (10) expression -> . IF LPAREN expression RPAREN LCURLYBRACE
    (11) expression -> . WHILE LPAREN expression RPAREN
    (12) expression -> . IF LPAREN expression RPAREN
    (13) expression -> . RCURLYBRACE ELSE LCURLYBRACE
    (14) expression -> . ELSE
    (15) expression -> . expression EQUAL primary
    (16) expression -> . expression LESSE primary
    (17) expression -> . expression GREATE primary
    (18) expression -> . expression UNEQUAL primary
    (19) expression -> . expression LESS primary
    (20) expression -> . expression GREAT primary
    (21) expression -> . primary EQUAL expression
    (22) expression -> . primary LESSE expression
    (23) expression -> . primary GREATE expression
    (24) expression -> . primary UNEQUAL expression
    (25) expression -> . primary LESS expression
    (26) expression -> . primary GREAT expression
    (27) expression -> . expression PLUS term
    (28) expression -> . expression MINUS term
    (29) expression -> . expression POWER term
    (30) expression -> . expression TIMES term
    (31) expression -> . expression DIVIDE2 term
    (32) expression -> . expression DIVIDE term
    (33) expression -> . expression MODULUS term
    (34) expression -> . expression OR term
    (35) expression -> . expression AND term
    (36) expression -> . expression IN expression
    (37) expression -> . term PLUS expression
    (38) expression -> . term MINUS expression
    (39) expression -> . term POWER expression
    (40) expression -> . term TIMES expression
    (41) expression -> . term DIVIDE2 expression
    (42) expression -> . term DIVIDE expression
    (43) expression -> . term MODULUS expression
    (44) expression -> . term OR expression
    (45) expression -> . term AND expression
    (46) expression -> . VARNAME SQOPEN primary SQCLOSE ASSIGN term SEMICOLON
    (47) expression -> . VARNAME ASSIGN expression SEMICOLON
    (48) expression -> . term ASSIGN expression SEMICOLON
    (49) expression -> . NOT term
    (50) expression -> . term
    (90) primary -> . STRING
    (91) primary -> . VARNAME
    (92) primary -> . NUMBER
    (93) primary -> . REAL
    (51) term -> . term LESSE term
    (52) term -> . term GREATE term
    (53) term -> . term UNEQUAL term
    (54) term -> . term LESS term
    (55) term -> . term GREAT term
    (56) term -> . term EQUAL term
    (57) term -> . LPAREN expression RPAREN
    (58) term -> . VARNAME SQOPEN expression SQCLOSE
    (59) term -> . VARNAME SQOPEN primary SQCLOSE SQOPEN primary SQCLOSE
    (60) term -> . VARNAME SQOPEN primary SQCLOSE
    (61) term -> . SQOPEN primary SQCLOSE
    (62) term -> . SQOPEN factor SQCLOSE SQOPEN NUMBER SQCLOSE
    (63) term -> . SQOPEN factor SQCLOSE
    (64) term -> . SQOPEN SQCLOSE
    (89) term -> . primary

    LCURLYBRACE     shift and go to state 2
    RCURLYBRACE     shift and go to state 3
    PRINT           shift and go to state 4
    RETURN          shift and go to state 6
    VARNAME         shift and go to state 7
    WHILE           shift and go to state 8
    IF              shift and go to state 9
    ELSE            shift and go to state 10
    NOT             shift and go to state 14
    STRING          shift and go to state 15
    NUMBER          shift and go to state 16
    REAL            shift and go to state 17
    LPAREN          shift and go to state 5
    SQOPEN          shift and go to state 13

    expression                     shift and go to state 37
    primary                        shift and go to state 11
    term                           shift and go to state 12

state 6

    (7) expression -> RETURN . expression SEMICOLON
    (1) expression -> . LCURLYBRACE expression RCURLYBRACE
    (3) expression -> . LCURLYBRACE
    (4) expression -> . RCURLYBRACE
    (5) expression -> . PRINT LPAREN expression RPAREN
    (6) expression -> . PRINT LPAREN expression RPAREN SEMICOLON
    (7) expression -> . RETURN expression SEMICOLON
    (8) expression -> . VARNAME LPAREN factor RPAREN
    (9) expression -> . WHILE LPAREN expression RPAREN LCURLYBRACE
    (10) expression -> . IF LPAREN expression RPAREN LCURLYBRACE
    (11) expression -> . WHILE LPAREN expression RPAREN
    (12) expression -> . IF LPAREN expression RPAREN
    (13) expression -> . RCURLYBRACE ELSE LCURLYBRACE
    (14) expression -> . ELSE
    (15) expression -> . expression EQUAL primary
    (16) expression -> . expression LESSE primary
    (17) expression -> . expression GREATE primary
    (18) expression -> . expression UNEQUAL primary
    (19) expression -> . expression LESS primary
    (20) expression -> . expression GREAT primary
    (21) expression -> . primary EQUAL expression
    (22) expression -> . primary LESSE expression
    (23) expression -> . primary GREATE expression
    (24) expression -> . primary UNEQUAL expression
    (25) expression -> . primary LESS expression
    (26) expression -> . primary GREAT expression
    (27) expression -> . expression PLUS term
    (28) expression -> . expression MINUS term
    (29) expression -> . expression POWER term
    (30) expression -> . expression TIMES term
    (31) expression -> . expression DIVIDE2 term
    (32) expression -> . expression DIVIDE term
    (33) expression -> . expression MODULUS term
    (34) expression -> . expression OR term
    (35) expression -> . expression AND term
    (36) expression -> . expression IN expression
    (37) expression -> . term PLUS expression
    (38) expression -> . term MINUS expression
    (39) expression -> . term POWER expression
    (40) expression -> . term TIMES expression
    (41) expression -> . term DIVIDE2 expression
    (42) expression -> . term DIVIDE expression
    (43) expression -> . term MODULUS expression
    (44) expression -> . term OR expression
    (45) expression -> . term AND expression
    (46) expression -> . VARNAME SQOPEN primary SQCLOSE ASSIGN term SEMICOLON
    (47) expression -> . VARNAME ASSIGN expression SEMICOLON
    (48) expression -> . term ASSIGN expression SEMICOLON
    (49) expression -> . NOT term
    (50) expression -> . term
    (90) primary -> . STRING
    (91) primary -> . VARNAME
    (92) primary -> . NUMBER
    (93) primary -> . REAL
    (51) term -> . term LESSE term
    (52) term -> . term GREATE term
    (53) term -> . term UNEQUAL term
    (54) term -> . term LESS term
    (55) term -> . term GREAT term
    (56) term -> . term EQUAL term
    (57) term -> . LPAREN expression RPAREN
    (58) term -> . VARNAME SQOPEN expression SQCLOSE
    (59) term -> . VARNAME SQOPEN primary SQCLOSE SQOPEN primary SQCLOSE
    (60) term -> . VARNAME SQOPEN primary SQCLOSE
    (61) term -> . SQOPEN primary SQCLOSE
    (62) term -> . SQOPEN factor SQCLOSE SQOPEN NUMBER SQCLOSE
    (63) term -> . SQOPEN factor SQCLOSE
    (64) term -> . SQOPEN SQCLOSE
    (89) term -> . primary

    LCURLYBRACE     shift and go to state 2
    RCURLYBRACE     shift and go to state 3
    PRINT           shift and go to state 4
    RETURN          shift and go to state 6
    VARNAME         shift and go to state 7
    WHILE           shift and go to state 8
    IF              shift and go to state 9
    ELSE            shift and go to state 10
    NOT             shift and go to state 14
    STRING          shift and go to state 15
    NUMBER          shift and go to state 16
    REAL            shift and go to state 17
    LPAREN          shift and go to state 5
    SQOPEN          shift and go to state 13

    expression                     shift and go to state 38
    primary                        shift and go to state 11
    term                           shift and go to state 12

state 7

    (8) expression -> VARNAME . LPAREN factor RPAREN
    (46) expression -> VARNAME . SQOPEN primary SQCLOSE ASSIGN term SEMICOLON
    (47) expression -> VARNAME . ASSIGN expression SEMICOLON
    (91) primary -> VARNAME .
    (58) term -> VARNAME . SQOPEN expression SQCLOSE
    (59) term -> VARNAME . SQOPEN primary SQCLOSE SQOPEN primary SQCLOSE
    (60) term -> VARNAME . SQOPEN primary SQCLOSE

  ! shift/reduce conflict for ASSIGN resolved as shift
    LPAREN          shift and go to state 39
    SQOPEN          shift and go to state 40
    ASSIGN          shift and go to state 41
    EQUAL           reduce using rule 91 (primary -> VARNAME .)
    LESSE           reduce using rule 91 (primary -> VARNAME .)
    GREATE          reduce using rule 91 (primary -> VARNAME .)
    UNEQUAL         reduce using rule 91 (primary -> VARNAME .)
    LESS            reduce using rule 91 (primary -> VARNAME .)
    GREAT           reduce using rule 91 (primary -> VARNAME .)
    PLUS            reduce using rule 91 (primary -> VARNAME .)
    MINUS           reduce using rule 91 (primary -> VARNAME .)
    POWER           reduce using rule 91 (primary -> VARNAME .)
    TIMES           reduce using rule 91 (primary -> VARNAME .)
    DIVIDE2         reduce using rule 91 (primary -> VARNAME .)
    DIVIDE          reduce using rule 91 (primary -> VARNAME .)
    MODULUS         reduce using rule 91 (primary -> VARNAME .)
    OR              reduce using rule 91 (primary -> VARNAME .)
    AND             reduce using rule 91 (primary -> VARNAME .)
    IN              reduce using rule 91 (primary -> VARNAME .)
    $end            reduce using rule 91 (primary -> VARNAME .)
    RCURLYBRACE     reduce using rule 91 (primary -> VARNAME .)
    RPAREN          reduce using rule 91 (primary -> VARNAME .)
    SEMICOLON       reduce using rule 91 (primary -> VARNAME .)
    SQCLOSE         reduce using rule 91 (primary -> VARNAME .)

  ! ASSIGN          [ reduce using rule 91 (primary -> VARNAME .) ]


state 8

    (9) expression -> WHILE . LPAREN expression RPAREN LCURLYBRACE
    (11) expression -> WHILE . LPAREN expression RPAREN

    LPAREN          shift and go to state 42


state 9

    (10) expression -> IF . LPAREN expression RPAREN LCURLYBRACE
    (12) expression -> IF . LPAREN expression RPAREN

    LPAREN          shift and go to state 43


state 10

    (14) expression -> ELSE .

    EQUAL           reduce using rule 14 (expression -> ELSE .)
    LESSE           reduce using rule 14 (expression -> ELSE .)
    GREATE          reduce using rule 14 (expression -> ELSE .)
    UNEQUAL         reduce using rule 14 (expression -> ELSE .)
    LESS            reduce using rule 14 (expression -> ELSE .)
    GREAT           reduce using rule 14 (expression -> ELSE .)
    PLUS            reduce using rule 14 (expression -> ELSE .)
    MINUS           reduce using rule 14 (expression -> ELSE .)
    POWER           reduce using rule 14 (expression -> ELSE .)
    TIMES           reduce using rule 14 (expression -> ELSE .)
    DIVIDE2         reduce using rule 14 (expression -> ELSE .)
    DIVIDE          reduce using rule 14 (expression -> ELSE .)
    MODULUS         reduce using rule 14 (expression -> ELSE .)
    OR              reduce using rule 14 (expression -> ELSE .)
    AND             reduce using rule 14 (expression -> ELSE .)
    IN              reduce using rule 14 (expression -> ELSE .)
    $end            reduce using rule 14 (expression -> ELSE .)
    RCURLYBRACE     reduce using rule 14 (expression -> ELSE .)
    RPAREN          reduce using rule 14 (expression -> ELSE .)
    SEMICOLON       reduce using rule 14 (expression -> ELSE .)
    SQCLOSE         reduce using rule 14 (expression -> ELSE .)


state 11

    (21) expression -> primary . EQUAL expression
    (22) expression -> primary . LESSE expression
    (23) expression -> primary . GREATE expression
    (24) expression -> primary . UNEQUAL expression
    (25) expression -> primary . LESS expression
    (26) expression -> primary . GREAT expression
    (89) term -> primary .

  ! shift/reduce conflict for LESSE resolved as shift
  ! shift/reduce conflict for GREATE resolved as shift
  ! shift/reduce conflict for UNEQUAL resolved as shift
  ! shift/reduce conflict for LESS resolved as shift
  ! shift/reduce conflict for GREAT resolved as shift
  ! shift/reduce conflict for EQUAL resolved as shift
    EQUAL           shift and go to state 44
    LESSE           shift and go to state 45
    GREATE          shift and go to state 46
    UNEQUAL         shift and go to state 47
    LESS            shift and go to state 48
    GREAT           shift and go to state 49
    PLUS            reduce using rule 89 (term -> primary .)
    MINUS           reduce using rule 89 (term -> primary .)
    POWER           reduce using rule 89 (term -> primary .)
    TIMES           reduce using rule 89 (term -> primary .)
    DIVIDE2         reduce using rule 89 (term -> primary .)
    DIVIDE          reduce using rule 89 (term -> primary .)
    MODULUS         reduce using rule 89 (term -> primary .)
    OR              reduce using rule 89 (term -> primary .)
    AND             reduce using rule 89 (term -> primary .)
    ASSIGN          reduce using rule 89 (term -> primary .)
    IN              reduce using rule 89 (term -> primary .)
    $end            reduce using rule 89 (term -> primary .)
    RCURLYBRACE     reduce using rule 89 (term -> primary .)
    RPAREN          reduce using rule 89 (term -> primary .)
    SEMICOLON       reduce using rule 89 (term -> primary .)
    SQCLOSE         reduce using rule 89 (term -> primary .)

  ! LESSE           [ reduce using rule 89 (term -> primary .) ]
  ! GREATE          [ reduce using rule 89 (term -> primary .) ]
  ! UNEQUAL         [ reduce using rule 89 (term -> primary .) ]
  ! LESS            [ reduce using rule 89 (term -> primary .) ]
  ! GREAT           [ reduce using rule 89 (term -> primary .) ]
  ! EQUAL           [ reduce using rule 89 (term -> primary .) ]


state 12

    (37) expression -> term . PLUS expression
    (38) expression -> term . MINUS expression
    (39) expression -> term . POWER expression
    (40) expression -> term . TIMES expression
    (41) expression -> term . DIVIDE2 expression
    (42) expression -> term . DIVIDE expression
    (43) expression -> term . MODULUS expression
    (44) expression -> term . OR expression
    (45) expression -> term . AND expression
    (48) expression -> term . ASSIGN expression SEMICOLON
    (50) expression -> term .
    (51) term -> term . LESSE term
    (52) term -> term . GREATE term
    (53) term -> term . UNEQUAL term
    (54) term -> term . LESS term
    (55) term -> term . GREAT term
    (56) term -> term . EQUAL term
